@@ -14,8 +14,8 @@
     </repositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.pc.plumbit.PlumbIT</exec.mainClass>
     </properties>
     <dependencies>
@@ -80,6 +80,7 @@
                             <mainClass>com.pc.plumbit.DataCalculator</mainClass>
                         </manifest>
                     </archive>
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
